# tat-cli

./: LICENSE  README.md  tat-cli.cabal
app/: Main.hs
src/: Lib.hs
