name:                tat-cli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         A simple task manager using tags
homepage:            https://github.com/hot-leaf-juice/tat-cli#readme
license:             MIT
license-file:        LICENSE
author:              Callum Oakley
maintainer:          callum@pusher.com
copyright:           2016 Callum Oakley
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tat-cli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tat-cli
  default-language:    Haskell2010

test-suite tat-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tat-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hot-leaf-juice/tat-cli
